# hexagon-fb

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  ProjectHome.md  README.md
inc/: l3ds.h
include/hexagon/: ActionRetriever.h  ActionRetriever.hpp  Appearance.hpp  Choreographer.h  Choreographer.hpp  Color.h  Color.hpp  Debug.h  Debug.hpp  FileSystem.h  Hexagon.h  Hexagon.hpp  Hexagon_Console_private.h  Hexagon_Console_private.hpp  Hexagon_Console_private.hpp.in  Iconcache.h  Iconcache.hpp  Key.h  Key.hpp  Layer.h  Layer.hpp  Light.h  Light.hpp  LinearMenuOption.h  LinearMenuOption.hpp  MenuOption.h  MenuOption.hpp  Model.h  Model.hpp  Node.h  Node.hpp  PersistentStorage.h  PersistentStorage.hpp  Shape.h  Shape.hpp  ShellExecutor.h  ShellExecutor.hpp  Vector.h  Vector.hpp  View.h  (+3 more)
include/hexagon/glut/: Camera.h  Camera.hpp  Display.h  Display.hpp  Input.h  Input.hpp  Menu.h  Menu.hpp  Scheduler.h  Scheduler.hpp  Wrapper.h  Wrapper.hpp  font8x8_basic.h  glut_emulation.hpp
include/hexagon/port/: Port.h  Port.hpp
include/hexagon/port/Win32/: Win32AR.h  Win32AR.hpp  Win32Exec.h  Win32Exec.hpp  Win32FS.h  Win32Registry.h  Win32Registry.hpp
include/hexagon/port/posix/: PosixActionRetriever.h  PosixActionRetriever.hpp  PosixExec.h  PosixExec.hpp  PosixFileSystem.h  PosixRegistry.h  PosixRegistry.hpp
source/hexagon/: ActionRetriever.cpp  Appearance.cpp  Choreographer.cpp  Color.cpp  Debug.cpp  Hexagon.cpp  Iconcache.cpp  Key.cpp  Layer.cpp  Light.cpp  LinearMenuOption.cpp  Model.cpp  Node.cpp  Shape.cpp  ShellExecutor.cpp  Vector.cpp  View.cpp  World.cpp
source/hexagon/glut/: Camera.cpp  Display.cpp  Input.cpp  Menu.cpp  Port.cpp  Scheduler.cpp  Wrapper.cpp  glutWrapper.cpp
source/hexagon/port/posix/: PosixActionRetriever.cpp  PosixExec.cpp  PosixFileSystem.cpp  PosixRegistry.cpp
source/hexagon/port/win32/: Win32AR.cpp  Win32Exec.cpp  Win32FS.cpp  Win32Registry.cpp
src/: ActionRetriever.cpp  ActionRetriever.h  Choreographer.cpp  Choreographer.h  Color.cpp  Color.h  Debug.cpp  Debug.h  FileSystem.h  Hexagon.cpp  Hexagon.h  Hexagon_Console_private.h  Hexagon_Console_private.rc  Iconcache.cpp  Iconcache.h  Key.cpp  Key.h  Layer.cpp  Layer.h  Light.cpp  Light.h  LinearMenuOption.cpp  LinearMenuOption.h  MenuOption.h  Model.cpp  Model.h  Node.cpp  Node.h  PersistentStorage.h  Shape.cpp  Shape.h  ShellExecutor.cpp  ShellExecutor.h  Vector.cpp  Vector.h  View.cpp  View.h  World.cpp  World.h
src/glut/: Camera.cpp  Camera.h  Display.cpp  Display.h  Input.cpp  Input.h  Menu.cpp  Menu.h  Port.cpp  Port.h  Scheduler.cpp  Scheduler.h  glutWrapper.cpp
src/port/win32/: Win32AR.cpp  Win32AR.h  Win32Exec.cpp  Win32Exec.h  Win32FS.cpp  Win32FS.h  Win32Registry.cpp  Win32Registry.h
tests/: gtest_directory.cpp
